# git-digest

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/git_digest/: __init__.py  __main__.py  cli.py  const.py
src/git_digest/utils/: llm.py
src/git_recap/: __init__.py  __main__.py  cli.py  const.py  git_utils.py  types.py
src/git_recap/utils/: git.py  llm.py
