[project]
name = "git-recap"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Rafid K.", email = "rafidka@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
git-recap = "git_recap:main"

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"
